--- a/style.css
+++ b/style.css
@@ -43,3 +43,35 @@
   align-items: center;
   justify-content: space-between;
 }
+
+/* home contents */
+.home{
+  display: flex;
+  background: url("images/banner.jpg") no-repeat center;
+  height: 100vh;
+  color: #fff;
+  min-height: 500px;
+  font-family: "Ubuntu",sans-serif;
+}
+
+.home .max-width{
+  margin: auto 0 auto 40px;
+}
+
+.home .home-content .text-1{
+  font-size: 27px;
+}
+
+.home .home-content .text-2{
+  font-size: 75px;
+  font-weight: 600;
+  margin-left: -3px;
+}
+.home .home-content .text-3{
+  font-size: 27px;
+}
+
+.home .home-content .text-3 span{
+  color: crimson;
+  font-weight: 500;
+}
