--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@
 .navbar{
   position: fixed;
   width: 100%;
-  padding: 15px 0px;
-  background: crimson;
+  padding: 30px 0px;
+  /* background: crimson; */
   font-family: 'Ubuntu', sans-serif;
 }
 
@@ -20,6 +20,9 @@
   font-weight: 600;
 }
 
+.navbar .logo a span{
+  color: crimson;
+}
 .navbar .menu li{
   list-style: none;
   display: inline-block;
@@ -30,6 +33,11 @@
   font-size: 18px;
   font-weight: 500;
   margin-left: 25px;
+  transition: color 0.3s ease;
+}
+
+.navbar .menu li a:hover{
+  color: crimson;
 }
 
 .max-width{
