--- a/style.css
+++ b/style.css
@@ -3,83 +3,77 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  text-decoration: none;
+  font-family: 'Poppins',sans-serif;
 }
 
-.navbar{
-  position: fixed;
+body{
+  background: #080808;
+  color: #fff;
+}
+
+#header{
   width: 100%;
-  padding: 30px 0px;
-  /* background: crimson; */
-  font-family: 'Ubuntu', sans-serif;
+  height: 100vh;
+  background-image: url("images/banner.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
-.navbar .logo a{
-  color: #fff;
-  font-size: 35px;
-  font-weight: 600;
-}
-
-.navbar .logo a span{
-  color: crimson;
-}
-.navbar .menu li{
-  list-style: none;
-  display: inline-block;
-}
-
-.navbar .menu li a{
-  color: #fff;
-  font-size: 18px;
-  font-weight: 500;
-  margin-left: 25px;
-  transition: color 0.3s ease;
-}
-
-.navbar .menu li a:hover{
-  color: crimson;
-}
-
-.max-width{
-  max-width: 1300px;
-  padding: 0 80px;
-  margin: auto;
-}
-
-.navbar .max-width{
-  display: flex;
+.container {
+  padding: 20px 50px;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-/* home contents */
-.home{
-  display: flex;
-  background: url("images/banner.jpg") no-repeat center;
-  height: 100vh;
-  color: #fff;
-  min-height: 500px;
-  font-family: "Ubuntu",sans-serif;
-}
 
-.home .max-width{
-  margin: auto 0 auto 40px;
-}
 
-.home .home-content .text-1{
-  font-size: 27px;
+.navbar{
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+    padding: 30px 0;
+    font-family: 'Ubuntu', sans-serif;
+    transition: all 0.3s ease;
 }
-
-.home .home-content .text-2{
-  font-size: 75px;
-  font-weight: 600;
-  margin-left: -3px;
+.navbar.sticky{
+    padding: 15px 0;
+    background: crimson;
 }
-.home .home-content .text-3{
-  font-size: 27px;
+.navbar .max-width{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
-
-.home .home-content .text-3 span{
-  color: crimson;
-  font-weight: 500;
+.navbar .logo a{
+    color: #fff;
+    font-size: 35px;
+    font-weight: 600;
+    text-decoration: none;
+}
+.navbar .logo a span{
+    color: crimson;
+    transition: all 0.3s ease;
+}
+.navbar.sticky .logo a span{
+    color: #fff;
+}
+.navbar .menu li{
+    list-style: none;
+    display: inline-block;
+}
+.navbar .menu li a{
+    display: block;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    margin-left: 25px;
+    transition: color 0.3s ease;
+    text-decoration: none;
+}
+.navbar .menu li a:hover{
+    color: crimson;
+}
+.navbar.sticky .menu li a:hover{
+    color: #fff;
 }
